--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset= "utf-8">
-        <title>Lucía Echeverry - portafolio web</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="estilos.css"> 
-    </head>
-    <body>     
-        <div class="botones">
-            <a href="https://github.com" class="button">Mis proyectos</a>
-            <a href="https://www.canva.com/design/DAE3cBjBC0U/6Y49smnd0mY-mr4l76GN1A/edit?utm_content=DAE3cBjBC0U&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"class="button">Curriculum Vitae</a>
-            <a href="Formulario portfolio.html" class="button">Contacto</a>
-        </div>
-
-        <div class="fotoprincipal">
-            <img img/ src="Foto principal.jpg" alt="Foto Laptop" >
-            <div class="titulo">
-                <div id="titulopequeño">
-                    <p>PORTFOLIO</p>
-                </div>
-                <h1>Lucía Echeverry</h1>
-                <p>Hola a tod@s! Bienvenidos a mi portafolio de desarrollo web</p>
-            </div>
-        </div>
-
-        <body>     
-            <div class="boton2">
-                <a href="https://github.com" class="button">About me</a>
-            </div>
-
-    </body> 
-
-</html>
+hello world
