--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="fotoprincipal">
-            <img src="Foto-principal.jpg" alt="Foto-Laptop">
+            <img src="img/Foto-principal.jpg" alt="Foto-Laptop">
             <div class="titulo">
                 <div id="titulopequeño">
                     <p>PORTFOLIO</p>
