--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset= "utf-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Lucía Echeverry - portafolio web</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="estilos.css"> 
     </head>
     <body>     
@@ -14,8 +13,11 @@
             <a href="Formulario portfolio.html" class="button">Contacto</a>
         </div>
 
+        <!-- Contenedor principal para imagen y texto -->
         <div class="fotoprincipal">
-            <img src="img/Foto-principal.jpg"alt="Foto-Laptop">
+            <div class="imagen">
+                <img src="img/Foto-principal.jpg" alt="Foto-Laptop">
+            </div>
             <div class="titulo">
                 <div id="titulopequeño">
                     <p>PORTFOLIO</p>
@@ -28,6 +30,5 @@
         <div class="boton2">
             <a href="https://github.com" class="button">About me</a>
         </div>
-
     </body> 
 </html>
